# diffview

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  cli.rs  diff.rs  input.rs  main.rs  render.rs  theme.rs  ui.rs
