[package]
name = "diffview"
version = "0.1.0"
edition = "2024"
description = "Side-by-side terminal diff viewer"
license = "MIT"
repository = "https://github.com/dainduncan-dev/diffview"
readme = "README.md"
homepage = "https://github.com/dainduncan-dev/diffview"
keywords = ["diff", "git", "tui", "terminal", "viewer"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.102"
atty = "0.2.14"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
thiserror = "2.0.18"
unicode-width = "0.2.2"
